# decoupling_llm_honeypt

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  ssh_host_key  ssh_host_key.pub
.claude/: settings.local.json
final-evaulation-runs/: aggregate.md  evaluation_runs.csv  requirements-viz.txt  visualize.py  visualize_extra.py
honeypot/: .env.example  Dockerfile  entrypoint.sh  requirements.txt  run_local.sh  ssh_host_key  ssh_host_key.pub  ssh_server.py
honeypot/baseline/: ssh_host_key  ssh_host_key.pub  ssh_server_baseline.py
honeypot/core/: fs_model.py  path_resolver.py  permissions.py  render_spec_builder.py  renderer_fallback.py  state_store.py  types.py
honeypot/eval/: metrics.py  report.py  run_eval.sh  scenario_runner.py
honeypot/eval/scenarios/: injection.yaml  long_session.yaml  normal.yaml  state_mod.yaml
honeypot/executor/: executor.py  main.py
honeypot/rag/: rag_client.py  rag_query.py  retrieval_schema_v1.json
honeypot/renderer/: rag_context_output.json  renderer_llm.py
honeypot/results/: metrics.jsonl
honeypot/results/deterministic_only/injection/: run_manifest.jsonl  run_summary.json
honeypot/runtime_logs/sessions/: _auth.jsonl
honeypot/state_templates/: state.json
honeypot/tools/: metrics_events.py
honeypot/validator/: validate.py
rag-corpus/: docker-compose.yml  requirements.txt
rag-corpus/docker/: Dockerfile.ubuntu-runner
rag-corpus/src/: build_kb.py  build_kb_v1.py  ingest_chroma.py  run_suite.py  run_suite_v1.py
rag-corpus/suite/: suite.yaml  suite_v1.yaml
(+1127 files in other folders)
